# activities

./: README.md  docker-compose.yml  index.html  package.json
.github/workflows/: deploy-backend.yml  deploy-bot.yml  deploy.yml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.ubuntu20  README.md
backend/deploy/: kidgo-api.service  nginx-kid-go.conf
backend/migrations/: 0001_kidgo_init.sql  0002_spot_coords.sql  0003_link_codes.sql  0004_custom_spots.sql  0005_user_platform.sql
backend/src/: api.rs  auth.rs  error.rs  geo.rs  main.rs  matching.rs  models.rs  nlu.rs  seed.rs  state.rs
bot/: .env.example  README.md  package-lock.json  package.json
bot/deploy/: kidgo-bot.service
bot/src/: api.js  core.js  flows.js  index.js
bot/src/adapters/: signal.js  telegram.js  whatsapp.js
design/: PRD.md  package-lock.json  vite.config.js
design/public/: CNAME
design/src/: index.css
design/src/components/: ActivityCard.jsx  GroupBadge.jsx  KidGoMark.jsx
design/src/data/: activities.js
design/src/lib/: datetime.js
design/src/pages/: About.jsx  ActivityDetail.jsx  Home.jsx
doc/: PLAN.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ActivitiesCalendar.jsx  ActivitiesMap.jsx  ActivityCard.jsx  GroupBadge.jsx  Layout.jsx  PlatformButtons.jsx  TelegramButton.jsx  ThemeToggle.jsx  (+1 more)
src/components/: Layout.jsx  WhatsAppButton.jsx
src/data/: groups.js  spots.js
src/pages/: About.jsx  Activities.jsx  Home.jsx
(+11 files in other folders)
